syntax = "proto3";
package translate;




import "monitor_sdk/model/monitor/translate_rule.proto";

/*
ListTranslateRule请求
*/
message ListTranslateRuleRequest {
    /*
    页数
    */
    int32 page = 1 ;
    /*
    分页大小
    */
    int32 page_size = 2 ;
}

/*
ListTranslateRule返回
*/
message ListTranslateRuleResponse {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回信息
    */
    string msg = 2 ;
    /*
    总数
    */
    int32 total = 3 ;
    /*
    页码
    */
    int32 page = 4 ;
    /*
    分页大小
    */
    int32 page_size = 5 ;
    /*
    翻译规则列表
    */
    repeated monitor.TransalteRule data = 6 ;
}

/*
ListTranslateRuleApi返回
*/
message ListTranslateRuleResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    translate.ListTranslateRuleResponse data = 4 ;
}

